# concert-app

backend/: .env  Cargo.toml
backend/migrations/: 20260603172313_create_users_table.sql  20260608192836_create_user.sql
backend/src/: app_state.rs  main.rs
backend/src/config/: env.rs
backend/src/database/: database.rs
backend/src/dto/: mod.rs  users_dto.rs
backend/src/errors/: error.rs  mod.rs
backend/src/extractors/: mod.rs  validated_json.rs
backend/src/handlers/: auth_hadnlers.rs  mod.rs
backend/src/middleware/: logger.rs
backend/src/model/: users.rs
backend/src/routes/: auth_route.rs  healt.rs  mod.rs
backend/src/services/: auth_services.rs
backend/src/utils/: claims.rs  mod.rs  password_hash.rs
