[package]
name = "concert-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
axum = "0.8.9"
chrono = { version = "0.4.44", features = ["serde"] }
dotenv = "0.15.0"
jsonwebtoken = { version = "10.4.0", features = ["rust_crypto"] }
redis = { version = "1.2.2", features = ["tokio-comp"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.8.0", features = ["runtime-tokio-rustls","postgres","uuid","chrono"] }
thiserror = "2.0.18"

tokio = { version = "1.52.3", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.6.11" , features = ["cors","trace"]}
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter","fmt"] }
uuid = { version = "1.23.2", features = ["v4","serde"] }
validator = { version = "0.20.0", features = ["derive"] }
